css style home bar

--- a/style.css
+++ b/style.css
@@ -7,3 +7,27 @@ nav{
     width: 100%;
     z-index: 1;
 }
+
+
+.logo
+{
+    font-size: 25px;
+    position: relative;
+    left: 5%;
+    color: white;
+    font-weight: bold;
+    line-height: 70px;
+}
+
+ul
+{
+    position: relative;
+    float: right;
+    margin-right: 20px;
+
+}
+ul li{
+    display: inline-block;
+    line-height: 70px;
+    margin: 0 5px;
+}
